--- a/gulimall_product/src/main/resources/templates/index.html
+++ b/gulimall_product/src/main/resources/templates/index.html
@@ -103,7 +103,7 @@
                        class="li_2">免费注册</a>
                 </li>
                 <li>
-                    <a th:if="${session.loginUser != null}" href="http://auth.gulimall.com/loguot.html" class="li_2">立即退出</a>
+                    <a th:if="${session.loginUser != null}" href="http://auth.gulimall.com/login.html" class="li_2">立即退出</a>
                 </li>
                 <span>|</span>
                 <li>
