测试不拉取就提交

--- a/gulimall_search/src/main/resources/templates/list.html
+++ b/gulimall_search/src/main/resources/templates/list.html
@@ -65,7 +65,7 @@
         <ul>
             <li>
                 <a th:if="${session.loginUser ==null}" href="http://auth.gulimall.com/login.html" class="li_2">你好，请登录</a>
-                <a th:else class="li_2" th:text="'你好,'+${session.loginUser.nickname}"></a>
+                <a th:unless="${session.loginUser ==null}" class="li_2" th:text="'你好,'+${session.loginUser.nickname}"></a>
             </li>
             <li>
                 <a href="http://auth.gulimall.com/register.html">免费注册</a>
