--- a/gulimall_product/src/main/resources/templates/item.html
+++ b/gulimall_product/src/main/resources/templates/item.html
@@ -60,7 +60,7 @@
             <ul class="header_ul_right">
                 <li style="border: 0;width: 100px">
                     <a href="http://auth.gulimall.com/login.html" th:if="${session.loginUser == null}" class="aa">你好，请登录</a>
-                    <a th:else class="aa" th:text="'你好，'+${session.loginUser.nickname}"></a>
+                    <a th:unless="${session.loginUser == null}" class="aa" th:text="'你好，'+${session.loginUser.nickname}"></a>
                 </li>
                 <li><a href="http://auth.gulimall.com/register.html" style="color: red;">免费注册</a> |</li>
                 <li><a href="/static/item/javascript:;" class="aa">我的订单</a> |</li>
@@ -622,7 +622,7 @@
 
                 <div class="box-btns clear">
                     <div class="box-btns-one">
-                        <input type="text" name="" id="" value="1"/>
+                        <input type="text" name="" id="numInput" value="1"/>
                         <div class="box-btns-one1">
 
                             <div>
@@ -639,8 +639,8 @@
                         </div>
                     </div>
                     <div class="box-btns-two">
-                        <a href="/static/item/../商品分类\index.html">
-                            立即预约
+                        <a href="#" id="addToCartA" th:attr="skuId=${item.skuInfoEntity.skuId}">
+                            加入购物车
                         </a>
                     </div>
                     <div class="box-btns-three">
@@ -1322,6 +1322,16 @@
     $(function () {
         $(".sku_attr_value").parent().css({"border": "solid 1px #CCC"});
         $("a[class='sku_attr_value checked']").css({"border": "solid 1px red"});	// jquery:a标签如果class属性是sku_attr_value checked，则显示为红色外框
+    })
+
+    //----- 自定义---
+        //事件
+    //跳转
+    $("#addToCartA").click(function (){
+        var num = $("#numInput").val();
+        var skuId = $(this).attr("skuId");
+        location.href = "http://cart.gulimall.com/addToCart?skuId="+skuId+"&num="+num;
+        return false;
     })
 </script>
 
