--- a/gulimall_product/src/main/resources/templates/item.html
+++ b/gulimall_product/src/main/resources/templates/item.html
@@ -63,7 +63,7 @@
                     <a th:unless="${session.loginUser == null}" class="aa" th:text="'你好，'+${session.loginUser.nickname}"></a>
                 </li>
                 <li><a href="http://auth.gulimall.com/register.html" style="color: red;">免费注册</a> |</li>
-                <li><a href="/static/item/javascript:;" class="aa">我的订单</a> |</li>
+                <li><a href="http://order.gulimall.com/list.html" class="aa">我的订单</a> |</li>
                 <li class="jingdong"><a href="/static/item/javascript:;">我的京东</a><span
                         class="glyphicon glyphicon-menu-down">|</span>
                     <ol class="jingdong_ol">
