--- a/gulimall_order/src/main/resources/templates/confirm.html
+++ b/gulimall_order/src/main/resources/templates/confirm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 
 	<head>
 		<meta charset="utf-8" />
@@ -588,7 +588,7 @@
 			<!--</div>-->
 		<!--</div>-->
 		<!--主体部分-->
-		<p class="p1">填写并核对订单信息</p>
+		<p class="p1">填写并核对订单信息[[${session.msg}]]<span style="color: #E4393C" th:if="${session.msg!=null}" th:text="${session.msg}"></span></p>
 		<div class="section">
 			<!--收货人信息-->
 			<div class="top-2">
@@ -728,7 +728,13 @@
 				<p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥<b id="payPriceEle">[[${#numbers.formatDecimal(orderConfirmData.payPrice,1,2)}]]</b></span></p>
 				<p class="yfze_b">寄送至: <span id="recieveAddressEle"></span> 收货人：<span id="recieveEle"></span> 电话：<span id="phoneEle"></span> </p>
 			</div>
-			<button class="tijiao">提交订单</button>
+			<form action="http://order.gulimall.com/submitOrder" method="post">
+				<input id="addrIdInput" type="hidden" name="addrId" value="addrId">
+				<input id="payPriceInput" type="hidden" name="payPrice" value="payPrice">
+				<!--幂等令牌-->
+				<input type="hidden" name="orderToken" th:value="${orderConfirmData.orderToken}">
+				<button class="tijiao" type="submit">提交订单</button>
+			</form>
 		</div>
 		</div>
 
@@ -985,12 +991,17 @@
 
 			//初始化查运费
 			function getFare(addrId){
+				//给提交表单回填选择的地址信息
+				$("#addrIdInput").val(addrId);
 				$.get("http://gulimall.com/api/ware/wareinfo/fare?addrId="+addrId,function (resp){
 					console.log("运费信息"+resp);
 					$("#fare").text(resp.data.fare);
 					var total = [[${#numbers.formatDecimal(orderConfirmData.payPrice,1,2)}]]
 					// 运费
-					$("#payPriceEle").text(total*1+resp.data.fare*1);
+					var payPrice = total*1+resp.data.fare*1;
+					$("#payPriceEle").text(payPrice);
+						//给提交表单回填选择的应付总额
+					$("#payPriceInput").val(payPrice);
 					//地址信息
 					var addr = resp.data.addressVo
 					$("#recieveAddressEle").text(addr.province+" "+addr.city+" "+addr.detailAddress);
